--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'com.vaadin' version '23.1.3'
 	id 'java'
-	id 'war'
+	//id 'war'
 }
 
 group = 'jp.whitenoise'
