--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
 	id 'com.vaadin' version '23.1.3'
 	id 'java'
 	//id 'war'
+	id "com.github.jk1.dependency-license-report" version "2.1"
 }
 
 group = 'jp.whitenoise'
@@ -18,6 +19,9 @@ configurations {
 
 repositories {
 	mavenCentral()
+	maven {
+		url 'https://maven.vaadin.com/vaadin-addons'
+	}
 }
 
 ext {
@@ -36,6 +40,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'com.vaadin:vaadin-spring-boot-starter'
+//	implementation 'com.wontlost:ckeditor-vaadin:2.3.4'
+	implementation 'org.vaadin:tinymce-for-flow:3.2.0'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
