--- a/package.json
+++ b/package.json
@@ -355,7 +355,8 @@
     "construct-style-sheets-polyfill": "$construct-style-sheets-polyfill",
     "lit": "$lit",
     "@polymer/polymer": "$@polymer/polymer",
-    "chokidar": "$chokidar",
-    "date-fns": "$date-fns"
+    "date-fns": "$date-fns",
+    "@vaadin/flow-frontend": "$@vaadin/flow-frontend",
+    "chokidar": "$chokidar"
   }
 }
