--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
 	id 'com.vaadin' version '23.1.3'
 	id 'java'
 	//id 'war'
+	// ライセンスレポート出力用プラグイン
 	id "com.github.jk1.dependency-license-report" version "2.1"
 }
 
