--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-	id 'org.springframework.boot' version '2.7.1'
+	id 'org.springframework.boot' version '2.7.8'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-	id 'com.vaadin' version '23.1.3'
+	id 'com.vaadin' version '23.3.5'
 	id 'java'
 	//id 'war'
 	// ライセンスレポート出力用プラグイン
@@ -26,7 +26,7 @@ repositories {
 }
 
 ext {
-	set('vaadinVersion', "23.1.3")
+	set('vaadinVersion', "23.3.5")
 }
 
 // ビルド環境判定→ローカル以外は商用ビルド
@@ -67,6 +67,10 @@ jar {
 }
 
 bootJar {
-	launchScript()
+	// launchScript()
 	archiveFileName = 'vaadin-lern.jar'
+}
+
+bootBuildImage {
+	builder = 'paketobuildpacks/builder:tiny'
 }
