--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@vaadin/app-layout": "23.3.5",
     "@vaadin/avatar": "23.3.5",
     "@vaadin/avatar-group": "23.3.5",
+    "@vaadin/board": "23.3.5",
     "@vaadin/bundles": "23.3.5",
     "@vaadin/button": "23.3.5",
+    "@vaadin/charts": "23.3.5",
     "@vaadin/checkbox": "23.3.5",
     "@vaadin/checkbox-group": "23.3.5",
     "@vaadin/combo-box": "23.3.5",
@@ -21,6 +23,8 @@
     "@vaadin/component-base": "23.3.5",
     "@vaadin/confirm-dialog": "23.3.5",
     "@vaadin/context-menu": "23.3.5",
+    "@vaadin/cookie-consent": "23.3.5",
+    "@vaadin/crud": "23.3.5",
     "@vaadin/custom-field": "23.3.5",
     "@vaadin/date-picker": "23.3.5",
     "@vaadin/date-time-picker": "23.3.5",
@@ -31,6 +35,7 @@
     "@vaadin/field-highlighter": "23.3.5",
     "@vaadin/form-layout": "23.3.5",
     "@vaadin/grid": "23.3.5",
+    "@vaadin/grid-pro": "23.3.5",
     "@vaadin/horizontal-layout": "23.3.5",
     "@vaadin/icon": "23.3.5",
     "@vaadin/icons": "23.3.5",
@@ -40,6 +45,7 @@
     "@vaadin/list-box": "23.3.5",
     "@vaadin/lit-renderer": "23.3.5",
     "@vaadin/login": "23.3.5",
+    "@vaadin/map": "23.3.5",
     "@vaadin/menu-bar": "23.3.5",
     "@vaadin/message-input": "23.3.5",
     "@vaadin/message-list": "23.3.5",
@@ -50,6 +56,7 @@
     "@vaadin/polymer-legacy-adapter": "23.3.5",
     "@vaadin/progress-bar": "23.3.5",
     "@vaadin/radio-group": "23.3.5",
+    "@vaadin/rich-text-editor": "23.3.5",
     "@vaadin/router": "1.7.4",
     "@vaadin/scroller": "23.3.5",
     "@vaadin/select": "23.3.5",
@@ -64,11 +71,15 @@
     "@vaadin/vaadin-accordion": "23.3.5",
     "@vaadin/vaadin-app-layout": "23.3.5",
     "@vaadin/vaadin-avatar": "23.3.5",
+    "@vaadin/vaadin-board": "23.3.5",
     "@vaadin/vaadin-button": "23.3.5",
+    "@vaadin/vaadin-charts": "23.3.5",
     "@vaadin/vaadin-checkbox": "23.3.5",
     "@vaadin/vaadin-combo-box": "23.3.5",
     "@vaadin/vaadin-confirm-dialog": "23.3.5",
     "@vaadin/vaadin-context-menu": "23.3.5",
+    "@vaadin/vaadin-cookie-consent": "23.3.5",
+    "@vaadin/vaadin-crud": "23.3.5",
     "@vaadin/vaadin-custom-field": "23.3.5",
     "@vaadin/vaadin-date-picker": "23.3.5",
     "@vaadin/vaadin-date-time-picker": "23.3.5",
@@ -77,6 +88,7 @@
     "@vaadin/vaadin-dialog": "23.3.5",
     "@vaadin/vaadin-form-layout": "23.3.5",
     "@vaadin/vaadin-grid": "23.3.5",
+    "@vaadin/vaadin-grid-pro": "23.3.5",
     "@vaadin/vaadin-icon": "23.3.5",
     "@vaadin/vaadin-icons": "23.3.5",
     "@vaadin/vaadin-item": "23.3.5",
@@ -92,6 +104,7 @@
     "@vaadin/vaadin-overlay": "23.3.5",
     "@vaadin/vaadin-progress-bar": "23.3.5",
     "@vaadin/vaadin-radio-button": "23.3.5",
+    "@vaadin/vaadin-rich-text-editor": "23.3.5",
     "@vaadin/vaadin-select": "23.3.5",
     "@vaadin/vaadin-split-layout": "23.3.5",
     "@vaadin/vaadin-tabs": "23.3.5",
@@ -104,9 +117,12 @@
     "@vaadin/vaadin-virtual-list": "23.3.5",
     "@vaadin/vertical-layout": "23.3.5",
     "@vaadin/virtual-list": "23.3.5",
+    "@zxing/browser": "^0.1.1",
+    "@zxing/library": "^0.19.1",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
-    "lit": "2.6.1"
+    "lit": "2.6.1",
+    "proj4": "2.8.1"
   },
   "devDependencies": {
     "@rollup/plugin-replace": "3.1.0",
@@ -136,8 +152,10 @@
       "@vaadin/app-layout": "23.3.5",
       "@vaadin/avatar": "23.3.5",
       "@vaadin/avatar-group": "23.3.5",
+      "@vaadin/board": "23.3.5",
       "@vaadin/bundles": "23.3.5",
       "@vaadin/button": "23.3.5",
+      "@vaadin/charts": "23.3.5",
       "@vaadin/checkbox": "23.3.5",
       "@vaadin/checkbox-group": "23.3.5",
       "@vaadin/combo-box": "23.3.5",
@@ -145,6 +163,8 @@
       "@vaadin/component-base": "23.3.5",
       "@vaadin/confirm-dialog": "23.3.5",
       "@vaadin/context-menu": "23.3.5",
+      "@vaadin/cookie-consent": "23.3.5",
+      "@vaadin/crud": "23.3.5",
       "@vaadin/custom-field": "23.3.5",
       "@vaadin/date-picker": "23.3.5",
       "@vaadin/date-time-picker": "23.3.5",
@@ -155,6 +175,7 @@
       "@vaadin/field-highlighter": "23.3.5",
       "@vaadin/form-layout": "23.3.5",
       "@vaadin/grid": "23.3.5",
+      "@vaadin/grid-pro": "23.3.5",
       "@vaadin/horizontal-layout": "23.3.5",
       "@vaadin/icon": "23.3.5",
       "@vaadin/icons": "23.3.5",
@@ -164,6 +185,7 @@
       "@vaadin/list-box": "23.3.5",
       "@vaadin/lit-renderer": "23.3.5",
       "@vaadin/login": "23.3.5",
+      "@vaadin/map": "23.3.5",
       "@vaadin/menu-bar": "23.3.5",
       "@vaadin/message-input": "23.3.5",
       "@vaadin/message-list": "23.3.5",
@@ -174,6 +196,7 @@
       "@vaadin/polymer-legacy-adapter": "23.3.5",
       "@vaadin/progress-bar": "23.3.5",
       "@vaadin/radio-group": "23.3.5",
+      "@vaadin/rich-text-editor": "23.3.5",
       "@vaadin/router": "1.7.4",
       "@vaadin/scroller": "23.3.5",
       "@vaadin/select": "23.3.5",
@@ -188,11 +211,15 @@
       "@vaadin/vaadin-accordion": "23.3.5",
       "@vaadin/vaadin-app-layout": "23.3.5",
       "@vaadin/vaadin-avatar": "23.3.5",
+      "@vaadin/vaadin-board": "23.3.5",
       "@vaadin/vaadin-button": "23.3.5",
+      "@vaadin/vaadin-charts": "23.3.5",
       "@vaadin/vaadin-checkbox": "23.3.5",
       "@vaadin/vaadin-combo-box": "23.3.5",
       "@vaadin/vaadin-confirm-dialog": "23.3.5",
       "@vaadin/vaadin-context-menu": "23.3.5",
+      "@vaadin/vaadin-cookie-consent": "23.3.5",
+      "@vaadin/vaadin-crud": "23.3.5",
       "@vaadin/vaadin-custom-field": "23.3.5",
       "@vaadin/vaadin-date-picker": "23.3.5",
       "@vaadin/vaadin-date-time-picker": "23.3.5",
@@ -201,6 +228,7 @@
       "@vaadin/vaadin-dialog": "23.3.5",
       "@vaadin/vaadin-form-layout": "23.3.5",
       "@vaadin/vaadin-grid": "23.3.5",
+      "@vaadin/vaadin-grid-pro": "23.3.5",
       "@vaadin/vaadin-icon": "23.3.5",
       "@vaadin/vaadin-icons": "23.3.5",
       "@vaadin/vaadin-item": "23.3.5",
@@ -216,6 +244,7 @@
       "@vaadin/vaadin-overlay": "23.3.5",
       "@vaadin/vaadin-progress-bar": "23.3.5",
       "@vaadin/vaadin-radio-button": "23.3.5",
+      "@vaadin/vaadin-rich-text-editor": "23.3.5",
       "@vaadin/vaadin-select": "23.3.5",
       "@vaadin/vaadin-split-layout": "23.3.5",
       "@vaadin/vaadin-tabs": "23.3.5",
@@ -228,9 +257,12 @@
       "@vaadin/vaadin-virtual-list": "23.3.5",
       "@vaadin/vertical-layout": "23.3.5",
       "@vaadin/virtual-list": "23.3.5",
+      "@zxing/browser": "^0.1.1",
+      "@zxing/library": "^0.19.1",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
-      "lit": "2.6.1"
+      "lit": "2.6.1",
+      "proj4": "2.8.1"
     },
     "devDependencies": {
       "@rollup/plugin-replace": "3.1.0",
@@ -248,7 +280,7 @@
       "workbox-core": "6.5.4",
       "workbox-precaching": "6.5.4"
     },
-    "hash": "4fbd84d097de8f423b32ad784ed7600eba86a880677dae141a768b1c60913627"
+    "hash": "aa2ee2515d6f40c12fe3d7e365eb39bbc7e6798181fdcd0589bd69b9bba619dc"
   },
   "overrides": {
     "@vaadin/bundles": "$@vaadin/bundles",
@@ -351,10 +383,26 @@
     "@vaadin/vaadin-virtual-list": "$@vaadin/vaadin-virtual-list",
     "@vaadin/vertical-layout": "$@vaadin/vertical-layout",
     "@vaadin/virtual-list": "$@vaadin/virtual-list",
+    "@vaadin/board": "$@vaadin/board",
+    "@vaadin/charts": "$@vaadin/charts",
+    "@vaadin/cookie-consent": "$@vaadin/cookie-consent",
+    "@vaadin/crud": "$@vaadin/crud",
+    "@vaadin/grid-pro": "$@vaadin/grid-pro",
+    "@vaadin/map": "$@vaadin/map",
+    "@vaadin/rich-text-editor": "$@vaadin/rich-text-editor",
+    "@vaadin/vaadin-board": "$@vaadin/vaadin-board",
+    "@vaadin/vaadin-charts": "$@vaadin/vaadin-charts",
+    "@vaadin/vaadin-cookie-consent": "$@vaadin/vaadin-cookie-consent",
+    "@vaadin/vaadin-crud": "$@vaadin/vaadin-crud",
+    "@vaadin/vaadin-grid-pro": "$@vaadin/vaadin-grid-pro",
+    "@vaadin/vaadin-rich-text-editor": "$@vaadin/vaadin-rich-text-editor",
     "@vaadin/common-frontend": "$@vaadin/common-frontend",
     "construct-style-sheets-polyfill": "$construct-style-sheets-polyfill",
     "lit": "$lit",
     "@polymer/polymer": "$@polymer/polymer",
-    "date-fns": "$date-fns"
+    "@zxing/library": "$@zxing/library",
+    "proj4": "$proj4",
+    "date-fns": "$date-fns",
+    "@zxing/browser": "$@zxing/browser"
   }
 }
