--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
-spring.profiles.active=local
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:h2:mem:test;MODE=PostgreSQL
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.sql.init.encoding=UTF-8
+spring.h2.console.enabled=true
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=true
+spring.sql.init.mode=always
+#spring.sql.init.schema-locations=classpath:schema.sql
+#spring.sql.init.data-locations=classpath:data.sql
