--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,8 @@
 plugins {
-	id 'org.springframework.boot' version '2.7.8'
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-	id 'com.vaadin' version '23.3.5'
 	id 'java'
-	//id 'war'
+	id 'org.springframework.boot' version '3.0.3'
+	id 'io.spring.dependency-management' version '1.1.0'
+	id 'com.vaadin' version '24.0.0.rc1'
 	// ライセンスレポート出力用プラグイン
 	id "com.github.jk1.dependency-license-report" version "2.1"
 }
@@ -21,12 +20,15 @@ configurations {
 repositories {
 	mavenCentral()
 	maven {
+		url 'https://maven.vaadin.com/vaadin-prereleases'
+	}
+	maven {
 		url 'https://maven.vaadin.com/vaadin-addons'
 	}
 }
 
 ext {
-	set('vaadinVersion', "23.3.5")
+	set('vaadinVersion', "24.0.0.rc1")
 }
 
 // ビルド環境判定→ローカル以外は商用ビルド
@@ -36,21 +38,28 @@ vaadin {
 }
 
 dependencies {
-//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+	// フロント
+	implementation 'com.vaadin:vaadin-core'
 	implementation 'com.vaadin:vaadin-spring-boot-starter'
 //	implementation 'com.wontlost:ckeditor-vaadin:2.3.4'
 	implementation 'org.vaadin:tinymce-for-flow:3.2.0'
 	implementation 'com.wontlost:zxing-vaadin:2.0.1'
 
-	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
+	// バックエンド
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	// DAO, DTO
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-//	runtimeOnly 'org.postgresql:postgresql'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
 	runtimeOnly 'com.h2database:h2'
+//	runtimeOnly 'org.postgresql:postgresql'
+
+	// 開発, テスト
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 }
