--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,10 @@
+pluginManagement {
+  repositories {
+    gradlePluginPortal()
+	maven {
+		url 'https://maven.vaadin.com/vaadin-prereleases'
+	}
+  }
+}
+
 rootProject.name = 'vaadin-lern'
