--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,14 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.sql.init.encoding=UTF-8
-spring.h2.console.enabled=true
+#spring.h2.console.enabled=true
 #spring.jpa.hibernate.ddl-auto=create
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 spring.sql.init.mode=always
 #spring.sql.init.schema-locations=classpath:schema.sql
 #spring.sql.init.data-locations=classpath:data.sql
+
+public.key=BH8eMJUqrRKMBPafH1kx3xbt_BCp5QC1brVz_POJXli3idAiAVAntScP9Ip7c1xaVhyQr33jRaEYWM1Yzui6EtM
+private.key=HCmNJjl4oFRBBskMSxtUdvEoawBnCEZH8dp6EjrgZe0
+subject=VaadinLern
