--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.1.4'
-	id 'io.spring.dependency-management' version '1.1.0'
+	id 'io.spring.dependency-management' version '1.1.3'
 	id 'com.vaadin' version '24.2.0'
 	// ライセンスレポート出力用プラグイン
 	id "com.github.jk1.dependency-license-report" version "2.1"
@@ -9,7 +9,10 @@ plugins {
 
 group = 'jp.whitenoise'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+}
 
 configurations {
 	compileOnly {
@@ -44,6 +47,9 @@ dependencies {
 //	implementation 'com.wontlost:ckeditor-vaadin:2.3.4'
 	implementation 'org.vaadin:tinymce-for-flow:3.2.0'
 	implementation 'com.wontlost:zxing-vaadin:2.0.1'
+
+	// WebPush
+	implementation 'com.vaadin:flow-webpush'
 
 	// バックエンド
 	implementation 'org.springframework.boot:spring-boot-starter-security'
