--- a/.github/workflows/Container.yml
+++ b/.github/workflows/Container.yml
@@ -1,5 +1,5 @@
 
-name: Java CI with Gradle
+name: build Container image
 
 on:
   push:
@@ -27,4 +27,7 @@ jobs:
     - name: Build with Gradle
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
-        arguments: build
+        arguments: bootJar
+    - uses: actions/checkout@v3
+    - name: Build the Docker image
+      run: docker build . --file Containerfile --tag vaadin-lern:$(date +%s)
