--- a/.github/workflows/Container.yml
+++ b/.github/workflows/Container.yml
@@ -29,7 +29,7 @@ jobs:
       with:
         arguments: bootJar
     - name: Build the Docker image
-      run: docker build . --file Containerfile --tag ghcr.io/$GITHUB_ACTOR/vaadin-lern:latest
+      run: docker build . --file Containerfile --tag ghcr.io/whitenoise0000/vaadin-lern:latest
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2
       with:
@@ -37,4 +37,4 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }} 
     - name: Push Docker Image
-      run: docker push ghcr.io/$GITHUB_ACTOR/pnovel:latest
+      run: docker push ghcr.io/whitenoise0000/pnovel:latest
