--- a/.github/workflows/Container.yml
+++ b/.github/workflows/Container.yml
@@ -15,25 +15,31 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+    
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
+    
     - name: Make gradlew executable
       run: chmod +x ./gradlew
+    
     - name: Build with Gradle
-      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+      uses: gradle/gradle-build-action@v2
       with:
         arguments: bootJar
+    
     - name: Build the Docker image
       run: docker build . --file Containerfile --tag ghcr.io/whitenoise0000/vaadin-lern:latest
+
     - name: Login to GitHub Container Registry
-      uses: docker/login-action@v2
+      uses: docker/login-action@v3
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }} 
+    
     - name: Push Docker Image
       run: docker push ghcr.io/whitenoise0000/vaadin-lern:latest
