--- a/.github/workflows/Container.yml
+++ b/.github/workflows/Container.yml
@@ -1,5 +1,5 @@
 
-name: コンテナイメージ作成→プッシュ
+name: Build and push Container images
 
 on:
   push:
@@ -31,15 +31,17 @@ jobs:
       with:
         arguments: bootJar
     
-    - name: Build the Docker image
-      run: docker build . --file Containerfile --tag ghcr.io/whitenoise0000/vaadin-lern:latest
-
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v3
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }} 
-    
-    - name: Push Docker Image
-      run: docker push ghcr.io/whitenoise0000/vaadin-lern:latest
+  
+    - name: Build and push Container images
+      uses: docker/build-push-action@v5
+      with:
+        file: Containerfile
+        platforms: linux/amd64,linux/arm64
+        push: true
+        tags: ghcr.io/whitenoise0000/vaadin-lern:latest
