--- a/package.json
+++ b/package.json
@@ -3,97 +3,97 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@polymer/polymer": "3.5.1",
-    "@vaadin/a11y-base": "24.2.0",
-    "@vaadin/accordion": "24.2.0",
-    "@vaadin/app-layout": "24.2.0",
-    "@vaadin/avatar": "24.2.0",
-    "@vaadin/avatar-group": "24.2.0",
-    "@vaadin/board": "24.2.0",
-    "@vaadin/bundles": "24.2.0",
-    "@vaadin/button": "24.2.0",
-    "@vaadin/charts": "24.2.0",
-    "@vaadin/checkbox": "24.2.0",
-    "@vaadin/checkbox-group": "24.2.0",
-    "@vaadin/combo-box": "24.2.0",
-    "@vaadin/common-frontend": "0.0.18",
-    "@vaadin/component-base": "24.2.0",
-    "@vaadin/confirm-dialog": "24.2.0",
-    "@vaadin/context-menu": "24.2.0",
-    "@vaadin/cookie-consent": "24.2.0",
-    "@vaadin/crud": "24.2.0",
-    "@vaadin/custom-field": "24.2.0",
-    "@vaadin/date-picker": "24.2.0",
-    "@vaadin/date-time-picker": "24.2.0",
-    "@vaadin/details": "24.2.0",
-    "@vaadin/dialog": "24.2.0",
-    "@vaadin/email-field": "24.2.0",
-    "@vaadin/field-base": "24.2.0",
-    "@vaadin/field-highlighter": "24.2.0",
-    "@vaadin/form-layout": "24.2.0",
-    "@vaadin/grid": "24.2.0",
-    "@vaadin/grid-pro": "24.2.0",
-    "@vaadin/horizontal-layout": "24.2.0",
-    "@vaadin/icon": "24.2.0",
-    "@vaadin/icons": "24.2.0",
-    "@vaadin/input-container": "24.2.0",
-    "@vaadin/integer-field": "24.2.0",
-    "@vaadin/item": "24.2.0",
-    "@vaadin/list-box": "24.2.0",
-    "@vaadin/lit-renderer": "24.2.0",
-    "@vaadin/login": "24.2.0",
-    "@vaadin/map": "24.2.0",
-    "@vaadin/menu-bar": "24.2.0",
-    "@vaadin/message-input": "24.2.0",
-    "@vaadin/message-list": "24.2.0",
-    "@vaadin/multi-select-combo-box": "24.2.0",
-    "@vaadin/notification": "24.2.0",
-    "@vaadin/number-field": "24.2.0",
-    "@vaadin/overlay": "24.2.0",
-    "@vaadin/password-field": "24.2.0",
-    "@vaadin/polymer-legacy-adapter": "24.2.0",
-    "@vaadin/progress-bar": "24.2.0",
-    "@vaadin/radio-group": "24.2.0",
-    "@vaadin/rich-text-editor": "24.2.0",
+    "@vaadin/a11y-base": "24.3.0",
+    "@vaadin/accordion": "24.3.0",
+    "@vaadin/app-layout": "24.3.0",
+    "@vaadin/avatar": "24.3.0",
+    "@vaadin/avatar-group": "24.3.0",
+    "@vaadin/board": "24.3.0",
+    "@vaadin/bundles": "24.3.0",
+    "@vaadin/button": "24.3.0",
+    "@vaadin/charts": "24.3.0",
+    "@vaadin/checkbox": "24.3.0",
+    "@vaadin/checkbox-group": "24.3.0",
+    "@vaadin/combo-box": "24.3.0",
+    "@vaadin/common-frontend": "0.0.19",
+    "@vaadin/component-base": "24.3.0",
+    "@vaadin/confirm-dialog": "24.3.0",
+    "@vaadin/context-menu": "24.3.0",
+    "@vaadin/cookie-consent": "24.3.0",
+    "@vaadin/crud": "24.3.0",
+    "@vaadin/custom-field": "24.3.0",
+    "@vaadin/date-picker": "24.3.0",
+    "@vaadin/date-time-picker": "24.3.0",
+    "@vaadin/details": "24.3.0",
+    "@vaadin/dialog": "24.3.0",
+    "@vaadin/email-field": "24.3.0",
+    "@vaadin/field-base": "24.3.0",
+    "@vaadin/field-highlighter": "24.3.0",
+    "@vaadin/form-layout": "24.3.0",
+    "@vaadin/grid": "24.3.0",
+    "@vaadin/grid-pro": "24.3.0",
+    "@vaadin/horizontal-layout": "24.3.0",
+    "@vaadin/icon": "24.3.0",
+    "@vaadin/icons": "24.3.0",
+    "@vaadin/input-container": "24.3.0",
+    "@vaadin/integer-field": "24.3.0",
+    "@vaadin/item": "24.3.0",
+    "@vaadin/list-box": "24.3.0",
+    "@vaadin/lit-renderer": "24.3.0",
+    "@vaadin/login": "24.3.0",
+    "@vaadin/map": "24.3.0",
+    "@vaadin/menu-bar": "24.3.0",
+    "@vaadin/message-input": "24.3.0",
+    "@vaadin/message-list": "24.3.0",
+    "@vaadin/multi-select-combo-box": "24.3.0",
+    "@vaadin/notification": "24.3.0",
+    "@vaadin/number-field": "24.3.0",
+    "@vaadin/overlay": "24.3.0",
+    "@vaadin/password-field": "24.3.0",
+    "@vaadin/polymer-legacy-adapter": "24.3.0",
+    "@vaadin/progress-bar": "24.3.0",
+    "@vaadin/radio-group": "24.3.0",
+    "@vaadin/rich-text-editor": "24.3.0",
     "@vaadin/router": "1.7.5",
-    "@vaadin/scroller": "24.2.0",
-    "@vaadin/select": "24.2.0",
-    "@vaadin/side-nav": "24.2.0",
-    "@vaadin/split-layout": "24.2.0",
-    "@vaadin/tabs": "24.2.0",
-    "@vaadin/tabsheet": "24.2.0",
-    "@vaadin/text-area": "24.2.0",
-    "@vaadin/text-field": "24.2.0",
-    "@vaadin/time-picker": "24.2.0",
-    "@vaadin/tooltip": "24.2.0",
-    "@vaadin/upload": "24.2.0",
+    "@vaadin/scroller": "24.3.0",
+    "@vaadin/select": "24.3.0",
+    "@vaadin/side-nav": "24.3.0",
+    "@vaadin/split-layout": "24.3.0",
+    "@vaadin/tabs": "24.3.0",
+    "@vaadin/tabsheet": "24.3.0",
+    "@vaadin/text-area": "24.3.0",
+    "@vaadin/text-field": "24.3.0",
+    "@vaadin/time-picker": "24.3.0",
+    "@vaadin/tooltip": "24.3.0",
+    "@vaadin/upload": "24.3.0",
     "@vaadin/vaadin-development-mode-detector": "2.0.6",
-    "@vaadin/vaadin-lumo-styles": "24.2.0",
-    "@vaadin/vaadin-material-styles": "24.2.0",
-    "@vaadin/vaadin-themable-mixin": "24.2.0",
+    "@vaadin/vaadin-lumo-styles": "24.3.0",
+    "@vaadin/vaadin-material-styles": "24.3.0",
+    "@vaadin/vaadin-themable-mixin": "24.3.0",
     "@vaadin/vaadin-usage-statistics": "2.1.2",
-    "@vaadin/vertical-layout": "24.2.0",
-    "@vaadin/virtual-list": "24.2.0",
+    "@vaadin/vertical-layout": "24.3.0",
+    "@vaadin/virtual-list": "24.3.0",
     "@zxing/browser": "^0.1.1",
     "@zxing/library": "^0.19.1",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
-    "lit": "2.8.0",
-    "mobile-drag-drop": "2.3.0-rc.2",
-    "proj4": "2.9.1"
+    "lit": "3.1.0",
+    "proj4": "2.9.2"
   },
   "devDependencies": {
-    "@rollup/plugin-replace": "5.0.2",
-    "@rollup/pluginutils": "5.0.2",
-    "@vitejs/plugin-react": "4.0.4",
+    "@rollup/plugin-replace": "5.0.4",
+    "@rollup/pluginutils": "5.0.5",
+    "@vitejs/plugin-react": "4.2.0",
+    "@vitejs/plugin-react-swc": "3.5.0",
     "async": "3.2.4",
     "glob": "10.3.3",
     "rollup-plugin-brotli": "3.1.0",
     "rollup-plugin-visualizer": "5.9.2",
     "strip-css-comments": "5.0.0",
     "transform-ast": "2.4.4",
-    "typescript": "5.1.6",
-    "vite": "4.4.11",
-    "vite-plugin-checker": "0.6.1",
+    "typescript": "5.3.3",
+    "vite": "5.0.6",
+    "vite-plugin-checker": "0.6.2",
     "workbox-build": "7.0.0",
     "workbox-core": "7.0.0",
     "workbox-precaching": "7.0.0"
@@ -101,102 +101,102 @@
   "vaadin": {
     "dependencies": {
       "@polymer/polymer": "3.5.1",
-      "@vaadin/a11y-base": "24.2.0",
-      "@vaadin/accordion": "24.2.0",
-      "@vaadin/app-layout": "24.2.0",
-      "@vaadin/avatar": "24.2.0",
-      "@vaadin/avatar-group": "24.2.0",
-      "@vaadin/board": "24.2.0",
-      "@vaadin/bundles": "24.2.0",
-      "@vaadin/button": "24.2.0",
-      "@vaadin/charts": "24.2.0",
-      "@vaadin/checkbox": "24.2.0",
-      "@vaadin/checkbox-group": "24.2.0",
-      "@vaadin/combo-box": "24.2.0",
-      "@vaadin/common-frontend": "0.0.18",
-      "@vaadin/component-base": "24.2.0",
-      "@vaadin/confirm-dialog": "24.2.0",
-      "@vaadin/context-menu": "24.2.0",
-      "@vaadin/cookie-consent": "24.2.0",
-      "@vaadin/crud": "24.2.0",
-      "@vaadin/custom-field": "24.2.0",
-      "@vaadin/date-picker": "24.2.0",
-      "@vaadin/date-time-picker": "24.2.0",
-      "@vaadin/details": "24.2.0",
-      "@vaadin/dialog": "24.2.0",
-      "@vaadin/email-field": "24.2.0",
-      "@vaadin/field-base": "24.2.0",
-      "@vaadin/field-highlighter": "24.2.0",
-      "@vaadin/form-layout": "24.2.0",
-      "@vaadin/grid": "24.2.0",
-      "@vaadin/grid-pro": "24.2.0",
-      "@vaadin/horizontal-layout": "24.2.0",
-      "@vaadin/icon": "24.2.0",
-      "@vaadin/icons": "24.2.0",
-      "@vaadin/input-container": "24.2.0",
-      "@vaadin/integer-field": "24.2.0",
-      "@vaadin/item": "24.2.0",
-      "@vaadin/list-box": "24.2.0",
-      "@vaadin/lit-renderer": "24.2.0",
-      "@vaadin/login": "24.2.0",
-      "@vaadin/map": "24.2.0",
-      "@vaadin/menu-bar": "24.2.0",
-      "@vaadin/message-input": "24.2.0",
-      "@vaadin/message-list": "24.2.0",
-      "@vaadin/multi-select-combo-box": "24.2.0",
-      "@vaadin/notification": "24.2.0",
-      "@vaadin/number-field": "24.2.0",
-      "@vaadin/overlay": "24.2.0",
-      "@vaadin/password-field": "24.2.0",
-      "@vaadin/polymer-legacy-adapter": "24.2.0",
-      "@vaadin/progress-bar": "24.2.0",
-      "@vaadin/radio-group": "24.2.0",
-      "@vaadin/rich-text-editor": "24.2.0",
+      "@vaadin/a11y-base": "24.3.0",
+      "@vaadin/accordion": "24.3.0",
+      "@vaadin/app-layout": "24.3.0",
+      "@vaadin/avatar": "24.3.0",
+      "@vaadin/avatar-group": "24.3.0",
+      "@vaadin/board": "24.3.0",
+      "@vaadin/bundles": "24.3.0",
+      "@vaadin/button": "24.3.0",
+      "@vaadin/charts": "24.3.0",
+      "@vaadin/checkbox": "24.3.0",
+      "@vaadin/checkbox-group": "24.3.0",
+      "@vaadin/combo-box": "24.3.0",
+      "@vaadin/common-frontend": "0.0.19",
+      "@vaadin/component-base": "24.3.0",
+      "@vaadin/confirm-dialog": "24.3.0",
+      "@vaadin/context-menu": "24.3.0",
+      "@vaadin/cookie-consent": "24.3.0",
+      "@vaadin/crud": "24.3.0",
+      "@vaadin/custom-field": "24.3.0",
+      "@vaadin/date-picker": "24.3.0",
+      "@vaadin/date-time-picker": "24.3.0",
+      "@vaadin/details": "24.3.0",
+      "@vaadin/dialog": "24.3.0",
+      "@vaadin/email-field": "24.3.0",
+      "@vaadin/field-base": "24.3.0",
+      "@vaadin/field-highlighter": "24.3.0",
+      "@vaadin/form-layout": "24.3.0",
+      "@vaadin/grid": "24.3.0",
+      "@vaadin/grid-pro": "24.3.0",
+      "@vaadin/horizontal-layout": "24.3.0",
+      "@vaadin/icon": "24.3.0",
+      "@vaadin/icons": "24.3.0",
+      "@vaadin/input-container": "24.3.0",
+      "@vaadin/integer-field": "24.3.0",
+      "@vaadin/item": "24.3.0",
+      "@vaadin/list-box": "24.3.0",
+      "@vaadin/lit-renderer": "24.3.0",
+      "@vaadin/login": "24.3.0",
+      "@vaadin/map": "24.3.0",
+      "@vaadin/menu-bar": "24.3.0",
+      "@vaadin/message-input": "24.3.0",
+      "@vaadin/message-list": "24.3.0",
+      "@vaadin/multi-select-combo-box": "24.3.0",
+      "@vaadin/notification": "24.3.0",
+      "@vaadin/number-field": "24.3.0",
+      "@vaadin/overlay": "24.3.0",
+      "@vaadin/password-field": "24.3.0",
+      "@vaadin/polymer-legacy-adapter": "24.3.0",
+      "@vaadin/progress-bar": "24.3.0",
+      "@vaadin/radio-group": "24.3.0",
+      "@vaadin/rich-text-editor": "24.3.0",
       "@vaadin/router": "1.7.5",
-      "@vaadin/scroller": "24.2.0",
-      "@vaadin/select": "24.2.0",
-      "@vaadin/side-nav": "24.2.0",
-      "@vaadin/split-layout": "24.2.0",
-      "@vaadin/tabs": "24.2.0",
-      "@vaadin/tabsheet": "24.2.0",
-      "@vaadin/text-area": "24.2.0",
-      "@vaadin/text-field": "24.2.0",
-      "@vaadin/time-picker": "24.2.0",
-      "@vaadin/tooltip": "24.2.0",
-      "@vaadin/upload": "24.2.0",
+      "@vaadin/scroller": "24.3.0",
+      "@vaadin/select": "24.3.0",
+      "@vaadin/side-nav": "24.3.0",
+      "@vaadin/split-layout": "24.3.0",
+      "@vaadin/tabs": "24.3.0",
+      "@vaadin/tabsheet": "24.3.0",
+      "@vaadin/text-area": "24.3.0",
+      "@vaadin/text-field": "24.3.0",
+      "@vaadin/time-picker": "24.3.0",
+      "@vaadin/tooltip": "24.3.0",
+      "@vaadin/upload": "24.3.0",
       "@vaadin/vaadin-development-mode-detector": "2.0.6",
-      "@vaadin/vaadin-lumo-styles": "24.2.0",
-      "@vaadin/vaadin-material-styles": "24.2.0",
-      "@vaadin/vaadin-themable-mixin": "24.2.0",
+      "@vaadin/vaadin-lumo-styles": "24.3.0",
+      "@vaadin/vaadin-material-styles": "24.3.0",
+      "@vaadin/vaadin-themable-mixin": "24.3.0",
       "@vaadin/vaadin-usage-statistics": "2.1.2",
-      "@vaadin/vertical-layout": "24.2.0",
-      "@vaadin/virtual-list": "24.2.0",
+      "@vaadin/vertical-layout": "24.3.0",
+      "@vaadin/virtual-list": "24.3.0",
       "@zxing/browser": "^0.1.1",
       "@zxing/library": "^0.19.1",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
-      "lit": "2.8.0",
-      "mobile-drag-drop": "2.3.0-rc.2",
-      "proj4": "2.9.1"
+      "lit": "3.1.0",
+      "proj4": "2.9.2"
     },
     "devDependencies": {
-      "@rollup/plugin-replace": "5.0.2",
-      "@rollup/pluginutils": "5.0.2",
-      "@vitejs/plugin-react": "4.0.4",
+      "@rollup/plugin-replace": "5.0.4",
+      "@rollup/pluginutils": "5.0.5",
+      "@vitejs/plugin-react": "4.2.0",
+      "@vitejs/plugin-react-swc": "3.5.0",
       "async": "3.2.4",
       "glob": "10.3.3",
       "rollup-plugin-brotli": "3.1.0",
       "rollup-plugin-visualizer": "5.9.2",
       "strip-css-comments": "5.0.0",
       "transform-ast": "2.4.4",
-      "typescript": "5.1.6",
-      "vite": "4.4.11",
-      "vite-plugin-checker": "0.6.1",
+      "typescript": "5.3.3",
+      "vite": "5.0.6",
+      "vite-plugin-checker": "0.6.2",
       "workbox-build": "7.0.0",
       "workbox-core": "7.0.0",
       "workbox-precaching": "7.0.0"
     },
-    "hash": "043aeadfea7b9f2c2c42fa6bf1f3e3eb09ade9aee909fb4a1518c9902e6e55a3"
+    "hash": "f1888d06aada0cb0d1c9ff90e8a733dd0b34ed0919fde96298ab9a01cceb889c"
   },
   "overrides": {
     "@vaadin/bundles": "$@vaadin/bundles",
@@ -275,7 +275,6 @@
     "@zxing/browser": "$@zxing/browser",
     "@vaadin/overlay": "$@vaadin/overlay",
     "@vaadin/a11y-base": "$@vaadin/a11y-base",
-    "@vaadin/side-nav": "$@vaadin/side-nav",
-    "mobile-drag-drop": "$mobile-drag-drop"
+    "@vaadin/side-nav": "$@vaadin/side-nav"
   }
 }
