--- a/package.json
+++ b/package.json
@@ -92,8 +92,8 @@
     "strip-css-comments": "5.0.0",
     "transform-ast": "2.4.4",
     "typescript": "5.3.3",
-    "vite": "5.0.6",
-    "vite-plugin-checker": "0.6.2",
+    "vite": "^5.2.11",
+    "vite-plugin-checker": "^0.6.4",
     "workbox-build": "7.0.0",
     "workbox-core": "7.0.0",
     "workbox-precaching": "7.0.0"
