--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,10 @@ spring.sql.init.mode=always
 #spring.sql.init.schema-locations=classpath:schema.sql
 #spring.sql.init.data-locations=classpath:data.sql
 
+# WebプッシュAPI
 public.key=BH8eMJUqrRKMBPafH1kx3xbt_BCp5QC1brVz_POJXli3idAiAVAntScP9Ip7c1xaVhyQr33jRaEYWM1Yzui6EtM
 private.key=HCmNJjl4oFRBBskMSxtUdvEoawBnCEZH8dp6EjrgZe0
 subject=VaadinLern
+
+# bun利用
+vaadin.bun.enable=true
