--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.2.5'
 	id 'io.spring.dependency-management' version '1.1.3'
-	id 'com.vaadin' version '24.3.10'
+	id 'com.vaadin' version '24.4.11'
 	// ライセンスレポート出力用プラグイン
 	id "com.github.jk1.dependency-license-report" version "2.1"
 }
@@ -31,13 +31,12 @@ repositories {
 }
 
 ext {
-	set('vaadinVersion', "24.3.0")
+	set('vaadinVersion', "24.4.11")
 }
 
 // ビルド環境判定→ローカル以外は商用ビルド
-def notLocal = !project.hasProperty('isLocal')
 vaadin {
-	productionMode = notLocal
+	productionMode = !project.hasProperty('isLocal')
 }
 
 dependencies {
