--- a/.github/workflows/Container.yml
+++ b/.github/workflows/Container.yml
@@ -48,4 +48,15 @@ jobs:
         file: ./Containerfile
         platforms: linux/amd64,linux/arm64
         push: true
-        tags: ghcr.io/whitenoise0000/vaadin-lern:latest
+        tags: |
+          ghcr.io/whitenoise0000/vaadin-lern:latest
+          ghcr.io/whitenoise0000/vaadin-lern:${{ github.sha }}
+
+    - name: Delete Package Versions
+      uses: actions/delete-package-versions@v5.0.0
+      with:
+        owner: whitenoise0000
+        package-name: vaadin-lern
+        package-type: container
+        min-versions-to-keep: 5
+        token: ${{ secrets.GITHUB_TOKEN }}
