--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,12 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.2.5'
+	id 'org.springframework.boot' version '3.4.5'
 	id 'io.spring.dependency-management' version '1.1.3'
-	id 'com.vaadin' version '24.4.11'
+	id 'com.vaadin' version '24.7.4'
+	// id 'org.seasar.doma.compile' version '3.0.1'
+	// id 'org.domaframework.doma.codegen' version '3.0.0'
 	// ライセンスレポート出力用プラグイン
-	id "com.github.jk1.dependency-license-report" version "2.1"
+	//id "com.github.jk1.dependency-license-report" version "2.1"
 }
 
 group = 'jp.whitenoise'
@@ -31,7 +33,7 @@ repositories {
 }
 
 ext {
-	set('vaadinVersion', "24.4.11")
+	set('vaadinVersion', "24.7.4")
 }
 
 // ビルド環境判定→ローカル以外は商用ビルド
